# argos3-asv

./: ASVKineticEquationExpansion.nb  DrawTrajectory.m  DroneKinetics.m  README.asciidoc  TODO
examples/: CMakeLists.txt
examples/controllers/: CMakeLists.txt
examples/controllers/asv_test/: CMakeLists.txt  asv_test.cpp  asv_test.h
examples/experiments/: asv_1.argos
examples/loop_functions/: CMakeLists.txt
examples/loop_functions/asv_loop_functions/: CMakeLists.txt  asv_loop_functions.cpp  asv_loop_functions.h  asv_qt_user_functions.cpp  asv_qt_user_functions.h
src/: CMakeLists.txt
src/cmake/: ARGoSBuildChecks.cmake  FindEigen.cmake
src/plugins/robots/: CMakeLists.txt  CMakeLists.txt~
src/plugins/robots/asv/: CMakeLists.txt
src/plugins/robots/asv/control_interface/: ci_asv_dualpropeller_actuator.cpp  ci_asv_dualpropeller_actuator.h
src/plugins/robots/asv/simulator/: asv_dualpropeller_actuator.cpp  asv_dualpropeller_actuator.h  asv_entity.cpp  asv_entity.h  dynamics2d_asv_model.cpp  dynamics2d_asv_model.h  qtopengl_asv.cpp  qtopengl_asv.h
src/plugins/robots/generic/: CMakeLists.txt
src/plugins/simulator/entities/: CMakeLists.txt  propeller_equipped_entity.cpp  propeller_equipped_entity.h
src/plugins/simulator/physics_engines/: CMakeLists.txt
src/plugins/simulator/physics_engines/dynamics2d/: CMakeLists.txt  dynamics2d_asvdualpropeller_control.cpp  dynamics2d_asvdualpropeller_control.h  dynamics2d_velocity_control.cpp
src/plugins/simulator/physics_engines/dynamics2d/chipmunk-physics/include/: cpASVDynamics.h  cpBody.h  cpSpace.h
src/plugins/simulator/physics_engines/dynamics2d/chipmunk-physics/src/: cpBody.c  cpSpace.c  cpSpaceStep.c
src/plugins/simulator/visualizations/qt-opengl/: CMakeLists.txt
